--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /sources/**/build-*/
 /coverage
 /coverage.xml
+/coverage-unit.xml
+/coverage-integration.xml
+/coverage-functional.xml
 /vendor/
 /node_modules/
 /php-metrics
